# hello-ocaml

./: .envrc.template  .gitignore  Makefile  README.md  dune-project  hello_ocaml.opam
lib/: cli.ml  hello.ml  safe.ml  safeConsole.ml  util.ml
test/: cram.t  dune  hello_ocaml.ml  test_cli.ml  test_safe.ml  test_util.ml
